--- a/index.html
+++ b/index.html
@@ -6,7 +6,89 @@
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-  
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    html {
+      font-size: 10px;
+    }
+    body {
+      background: #000;
+      font: 1.2rem/1.5 'Malgun Gothic', dotum, sans-serif;
+      color: #767676;
+    }
+    
+    .list-poiema {
+      width: 460px;
+      height: 650px;
+      background: #fff;
+      border-radius: 5px;
+    }
+    .list-poiema .head {
+      position: relative;
+      padding: 14px 15px;
+      border-bottom: 1px solid #eee;
+    }
+    .list-poiema .head h3 {
+      font-size: 1.6rem;
+    }
+    .list-poiema .head .bbtn {
+      position: absolute;
+      right: 15px;
+      top: 50%;
+      font-size: 0;
+      transform: translateY(-50%);
+      border: 1px solid #ccc;
+    }
+    .list-poiema .head button {
+      width: 23px;
+      height: 23px;
+      background: #fff;
+      border: 0;
+      color: #ccc;
+      border-radius: 3px;
+    }
+    .list-poiema .head button.prev {
+      border-right: 1px solid #ccc;
+    }
+    .list-poiema .body {
+      padding: 35px 15px;
+    }
+    .list-poiema .body ul {
+      list-style: none;
+    }
+    .list-poiema .body li {
+      position: relative;
+    }
+    .list-poiema .body li + li {
+      margin-top: 30px;
+    }
+    .list-poiema .body dl {
+      margin-left: 110px;
+    }
+    .list-poiema .body dt {
+      margin-bottom: 5px;
+      font-size: 1.4rem;
+    }
+    .list-poiema .body dd {
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 3;
+      max-height: 4.5em;
+    }
+    .list-poiema .body .thumb {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100px;
+      height: 80px;
+    }
+    .list-poiema .body .thumb img {
+      max-width: 100%;
+    }
   </style>
 </head>
 <body>
@@ -15,14 +97,21 @@
       <h3>왓챠플레이에 새로 올라온 작품</h3>
       <div class="bbtn">
         <button class="prev">&lt;</button>
-        <button class="prev">&gt;</button>
+        <button class="next">&gt;</button>
       </div>
     </div>
     <div class="body">
       <ul>
         <li>
           <dl>
-            <dt>한니발 시즌 3</dt>
+            <dt>한니발 시즌 1</dt>
+            <dd>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus unde modi, nulla ex possimus fuga quia perferendis labore ratione, reiciendis dignissimos ipsam nobis, at eligendi nam similique praesentium aspernatur officia.</dd>
+          </dl>
+          <div class="thumb"><img src="./ot.jpg" alt=""></div>
+        </li>
+        <li>
+          <dl>
+            <dt>한니발 시즌 2</dt>
             <dd>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus unde modi, nulla ex possimus fuga quia perferendis labore ratione, reiciendis dignissimos ipsam nobis, at eligendi nam similique praesentium aspernatur officia.</dd>
           </dl>
           <div class="thumb"><img src="./ot.jpg" alt=""></div>
@@ -36,21 +125,14 @@
         </li>
         <li>
           <dl>
-            <dt>한니발 시즌 3</dt>
+            <dt>한니발 시즌 4</dt>
             <dd>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus unde modi, nulla ex possimus fuga quia perferendis labore ratione, reiciendis dignissimos ipsam nobis, at eligendi nam similique praesentium aspernatur officia.</dd>
           </dl>
           <div class="thumb"><img src="./ot.jpg" alt=""></div>
         </li>
         <li>
           <dl>
-            <dt>한니발 시즌 3</dt>
-            <dd>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus unde modi, nulla ex possimus fuga quia perferendis labore ratione, reiciendis dignissimos ipsam nobis, at eligendi nam similique praesentium aspernatur officia.</dd>
-          </dl>
-          <div class="thumb"><img src="./ot.jpg" alt=""></div>
-        </li>
-        <li>
-          <dl>
-            <dt>한니발 시즌 3</dt>
+            <dt>한니발 시즌 5</dt>
             <dd>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus unde modi, nulla ex possimus fuga quia perferendis labore ratione, reiciendis dignissimos ipsam nobis, at eligendi nam similique praesentium aspernatur officia.</dd>
           </dl>
           <div class="thumb"><img src="./ot.jpg" alt=""></div>
